# secprog-asg1

./: .gitignore
client/: Cargo.toml
client/app/: globals.css  page.tsx
client/app/create/: page.tsx
client/app/login/: page.tsx
client/app/update/: page.tsx
client/src/: main.rs
server/: Cargo.toml
server/migrations/2023-05-02-141558_create_item/: up.sql
server/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
