[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
stylist = { version = "0.12", features = ["yew_integration"] }
reqwest = "0.11"
yew-hooks = "0.2"
