[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex-literal = "0.4.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand_core = { version = "0.6", features = ["std"] }
sha-crypt = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.6.0-alpha2"
